--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,7 @@ html {
 }
 
 /* Create a Parallax Effect */
-.bgimg-1,
-.bgimg-2,
-.bgimg-3,
-.bgimg-4 {
+.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4 {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -57,13 +54,11 @@ html {
     cursor: pointer;
 }
 
+/* Contact Form Section */
+
+
 /* Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1600px) {
 
-    .bgimg-1,
-    .bgimg-2,
-    .bgimg-3 {
-        background-attachment: scroll;
-        min-height: 400px;
-    }
+    
 }
