--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,72 @@ html {
 }
 
 /* Contact Form Section */
+.form {
+    display: flex;
+    justify-content: space-around;
+    align-items: left;
+    flex-direction: column;
+    font-family: sans-serif;
+}
+
+form {
+    width: 50%;
+    position: relative;
+    height: 50px;
+    overflow: hidden;
+}
+
+.form input {
+    width: 100%;
+    height: 100%;
+    color: #595f6e;
+    padding-top: 20px;
+    border: none;
+    font-size: 16px;
+    outline: none;
+}
+
+.form label {
+    position: absolute;
+    bottom: 0px;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    border-bottom: 1px solid black;
+    font-size: 16px;
+}
+
+.form label::after {
+    content:"";
+    position: absolute;
+    left: 0px;
+    bottom: -2px;
+    height: 100%;
+    width:100%;
+    border-bottom: 3px solid #5fa8d3;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+}
+
+.content-name {
+    position: absolute;
+    bottom: 5px;
+    left: 0px;
+    transition: all 0.3s ease;
+}
+
+.form input:focus + .label-name .content-name,
+.form input:valid + .label-name .content-name {
+    transform: translateY(-90%);
+    font-size: 14px;
+    color: #5fa8d3;
+}
+
+.form input:focus + .label-name::after,
+.form input:valid + .label-name::after {
+    transform: translateX(0%);
+}
 
 
 /* Turn off parallax scrolling for tablets and phones */
