--- a/styles.css
+++ b/styles.css
@@ -43,16 +43,19 @@ html {
     width:100%;
     overflow:hidden;
     display: flex;
+    flex-direction: column;
 }
 
-.flexbar .bar-item {
+.flexbar .bar-item,
+.flexbar #tog-this {
     padding:8px 16px;
     float:left;
     border:none;
     outline:0;
+    width: auto;
     text-decoration:none;
     flex-direction: column;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
 }
 
 .button{
@@ -105,10 +108,7 @@ a:visited,a:hover{outline-width:0; color:#777}
     transform: rotate(45deg) translate(-8px, -8px);
 }
 
-/* Toggle Show Items */
-.tog-this {
-    display:none!important;
-}
+
 
 /* Hide/Show based on screen size */
 @media (max-width:992px) and (min-width:601px){
