--- a/styles.css
+++ b/styles.css
@@ -1,266 +1,62 @@
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: "Lato", sans-serif;
+:root {
+    --bg1:#f4f4f4;
+    --bg2: #35424a;
+    --nba: #e8491d
 }
 
-body,
-html {
-    height: 100%;
-    color: #777;
-    line-height: 1.8;
+body {
+    font: 15px/1.5 Arial, Helvetica, sans-serif;
+    padding: 0;
+    margin: 0;
+    background-color: var(--bg1);
 }
 
-/* Navbar */
-.top {
-    position: fixed;
-    width:100%;
-    z-index: 1;
-    top:0;
-    background-color: aliceblue;
+/* Global Styles */
+.container {
+    width: 80%;
+    margin: auto;
 }
 
-.bar{
-    width:100%;
-    overflow:hidden;
+ul {
+    margin: 0;
+    padding: 0;
 }
 
-.bar .bar-item{
-    padding:8px 16px;
-    float:left;
-    width:auto;
-    border:none;
-    display:block;
-    outline:0;
-    text-decoration:none;
+/* Header Styles */
+header {
+    background:var(--bg2);
+    color: #fff;
+    padding-top: 30px;
+    min-height: 70px;
+    border-bottom: var(--nba) 3px solid ;
 }
-
-.flexbar {
-    width:100%;
-    overflow:hidden;
-    display: flex;
-    flex-direction: column;
-}
-
-.flexbar .bar-item,
-.flexbar #tog-this {
-    padding:8px 16px;
-    float:left;
-    border:none;
-    outline:0;
-    width: auto;
-    text-decoration:none;
-    flex-direction: column;
-    flex-wrap: nowrap;
-}
-
-.button{
-    border:none;
-    display:inline-block;
-    padding:8px 16px;
-    vertical-align:middle;
-    overflow:hidden;
-    text-decoration:none;
-    color:inherit;
-    background-color:inherit;
-    text-align:center;
-    cursor:pointer;
-    white-space:nowrap;
-}
-
-button:hover{
-    color:#000;
-    background-color:#ccc;
-}
-
-a{background-color:transparent}
-a:visited,a:hover{outline-width:0; color:#777}
-
-.pr3 {
-    padding-right: 3px;
-}
-
-/* The Menu Icon */
-.menuIcon {
-    display:inline-block;
-    cursor: pointer;
-}
-.bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: #333;
-    margin: 6px 0;
-    transition: 0.4s;
-}
-.change .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-    transform: rotate(-45deg) translate(-9px, 6px);
-}
-.change .bar2 {
-    opacity: 0;
-}
-.change .bar3 {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px);
-    transform: rotate(45deg) translate(-8px, -8px);
-}
-
-
-
-/* Hide/Show based on screen size */
-@media (max-width:992px) and (min-width:601px){
-    .hide-medium{display:none!important}
-}
-@media (min-width:993px){
-    .modal-content{width:900px}
-    .hide-large{display:none!important}
-    .sidebar.collapse{display:block!important}
-}
-@media (max-width:600px){
-    .modal-content{
-        margin:0 10px;
-        width:auto!important
-    }
-    .modal{padding-top:30px}
-    .dropdown-hover.mobile .dropdown-content,
-    .dropdown-click.mobile .dropdown-content{
-        position:relative
-    }	
-    .hide-small{
-        display:none!important
-    }
-    .mobile{
-        display:block;width:100%!important
-    }
-    .bar-item.mobile,
-    .dropdown-hover.mobile,
-    .dropdown-click.mobile{
-        text-align:center
-    }
-    .dropdown-hover.mobile,
-    .dropdown-hover.mobile .btn,
-    .dropdown-hover.mobile .button,
-    .dropdown-click.mobile,
-    .dropdown-click.mobile .btn,
-    .dropdown-click.mobile .button{
-        width:100%
-    }
-}
-
-
-/* Create a Parallax Effect */
-/* .bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4 {
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-} */
-
-/* First image (Logo. Full height) */
-/* .bgimg-1 {
-    background-image: url('./img/Ryan-Roga-Beach-East-Coast.jpg');
-    min-height: 100%;
-} */
-
-/* Second image (Portfolio) */
-/* .bgimg-2 {
-    background-image: url("./img/Sea-Weeds-Stock-Dark-Ryan-Roga.jpg");
-    min-height: 400px;
-} */
-
-/* Third image (Contact) */
-/* .bgimg-3 {
-    background-image: url("./img/Ryan_Roga_Emma_Beach.jpg");
-    min-height: 400px;
-} */
-
-/* .bgimg-4 {
-    background-image: url("./img/MossAway-Website.png");
-    min-height: 400px;
-} */
-
-/* .w3-wide {
-    letter-spacing: 10px;
-} */
-
-/* .w3-hover-opacity {
-    cursor: pointer;
-} */
-
-/* Contact Form Section */
-/* .form {
-    display: flex;
-    justify-content: space-around;
-    align-items: left;
-    flex-direction: column;
-    font-family: sans-serif;
-} */
-
-/* form {
-    width: 50%;
-    position: relative;
-    height: 50px;
-    overflow: hidden;
-} */
-
-/* .form input {
-    width: 100%;
-    height: 100%;
-    color: #595f6e;
-    padding-top: 20px;
-    border: none;
+header a {
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
     font-size: 16px;
-    outline: none;
-} */
+}
 
-/* .form label {
-    position: absolute;
-    bottom: 0px;
-    left: 0%;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    border-bottom: 1px solid black;
-    font-size: 16px;
-} */
+header li {
+    float: left;
+    display: inline;
+    padding: 0 20px 0 20px;
+}
 
-/* .form label::after {
-    content:"";
-    position: absolute;
-    left: 0px;
-    bottom: -2px;
-    height: 100%;
-    width:100%;
-    border-bottom: 3px solid #5fa8d3;
-    transform: translateX(-100%);
-    transition: transform 0.3s ease;
-} */
+header #header-brand {
+    float: left;
+}
 
-/* .content-name {
-    position: absolute;
-    bottom: 5px;
-    left: 0px;
-    transition: all 0.3s ease;
-} */
+header #header-brand h1 {
+    margin: 0;
+}
 
-/* .form input:focus + .label-name .content-name,
-.form input:valid + .label-name .content-name {
-    transform: translateY(-90%);
-    font-size: 14px;
-    color: #5fa8d3;
-} */
+header nav {
+    float: right;
+    margin-top: 9px;
+}
 
-/* .form input:focus + .label-name::after,
-.form input:valid + .label-name::after {
-    transform: translateX(0%);
-} */
-
-
-/* Turn off parallax scrolling for tablets and phones
-@media only screen and (max-device-width: 1600px) {
-
-    
-} */
+header .feature,
+header .active a {
+    color: var(--nba);
+}
