--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root {
-    --bg1:#f4f4f4;
-    --bg2: #35424a;
-    --nba: #e8491d;
+    --bg1:#f6f6f6;
+    --bg2: #333f47;
+    --nba: #df751f;
     --hov: rgb(105, 138, 230);
     --lghtxt: #fff;
 }
@@ -57,6 +57,7 @@ header #header-brand h1 {
 header nav {
     float: right;
     margin-top: 9px;
+    font-weight: bold;
 }
 
 header .feature,
@@ -79,5 +80,75 @@ section#blurb h1 {
     padding-top: 15%;
     font-size: 35px;
     margin-bottom: 10px;
+    text-align: center;
+}
+
+#contact-form {
+    padding:15px;
+    color: var(--lghtxt);
+    background: var(--bg2);
+    height: 125px;
+}
+
+#contact-form h1 {
+
+    text-align: center;
+}
+
+#contact-form form {
+    
+    margin-top: 15px;
+}
+
+form input {
+    padding: 4px 7px;
+    height: 20px;
+}
+
+form input[type="text"]{
+    width:125px;
+}
+form input[type="email"]{
+    width:140px;
+}
+
+form input[type="tel"]{
+    width: 85px;
+}
+
+form label {
+    font-size: 20px;
+    vertical-align: middle;
+    padding: 8px;
+}
+
+.btn1 {
+    height: 38px;
+    background: var(--nba);
+    border: none;
+    padding: 0 20px;
+    color: var(--lghtxt);
+}
+
+/* Skills */
+#skills {
+    margin-top: 25px;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#skills .skill {
+    width: 22%;
+    padding: 10px;
+    text-align: center;
+    background-color: lightgrey;
+}
+
+#skills .skill i{
+    width: 90px;
+}
+
+#skills h1 {
     text-align: center;
 }
