--- a/css/style.css
+++ b/css/style.css
@@ -276,12 +276,38 @@ footer a {
     }
 
     /* Request Quote Sections */
+    section#contact-form {
+        height: auto;
+        padding-top: 30px;
+        padding-bottom: 40px;
+    }
+
     section#contact-form .container {
         display: block;
     }
 
+    section#contact-form h2 {
+        text-align: center;
+        margin-top: 8px;
+        margin-bottom: 30px;
+    }
+
+    section#contact-form form {
+        display:flex;
+        flex-wrap: wrap;
+    }
+
+    section#contact-form form > div{
+        display:flex;
+        flex-wrap: wrap;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     section#contact-form .submit-button {
-        width: 100%;
+        width: 200px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
 }
