--- a/css/style.css
+++ b/css/style.css
@@ -133,6 +133,7 @@ section#contact-form {
     width: 100%;
     box-sizing: border-box;
     outline:0;
+    transition: all 0.5s;
 }
 
 .services-input:focus{
@@ -159,6 +160,11 @@ textarea.services-input {
     padding-bottom: 15px;
     margin-top: -4px;
     font-weight: 700;
+    transition: all 0.5s;
+}
+
+[type="submit"].services-submit:hover {
+    background: var(--nbafocus);
 }
 
 /* Skills Section */
