--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,6 @@ ul {
     padding:15px;
     background-color: var(--bg2);
     color: var(--lghtxt);
-    margin-top: 10px;
-    margin-bottom: 10px;
 }
 
 /* Header Styles */
@@ -108,6 +106,8 @@ section#contact-form {
     color: var(--lghtxt);
     background: var(--bg2);
     height: 125px;
+    max-width: 420px;
+    margin: 50px auto;
 }
 
 .submit-button {
@@ -146,7 +146,6 @@ textarea.services-input {
     line-height: 150%;
     resize: vertical;
 }
-/* TODO - textarea still is just a few px larger than name/address - unclear why */
 
 [type="submit"].services-submit {
     width:100%;
@@ -220,7 +219,6 @@ article#text-col {
 .sidebar {
     float: right;
     width: 30%;
-    margin-top: 10px;
 }
 
 /* Services Styles */
@@ -231,15 +229,6 @@ ul#services li {
     margin-bottom: 5px;
     background: var(--bg2);
     color: var(--lghtxt);
-}
-
-aside#rfp .quote input{
-    width: 90%;
-}
-
-aside#rfp .quote textarea {
-    width: 94%;
-    height: 50px;
 }
 
 /* Footer Style */
