--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,32 @@ section#blurb p {
     font-size: 1.1rem;
 }
 
+/* Front Page Showcase Section */
+div.showcase-group {
+    border: solid 1px var(--nba);
+    margin: 15px auto;
+    padding:15px;
+    text-align: center;
+    min-width: 100px;
+    max-width: 300px;
+    background: var(--bg2);
+    color: var(--lghtxt);
+    text-align: center;
+}
+
+div.showcase-group>p {
+    margin-bottom: 20px;
+}
+
+div.showcase-group>p>svg {
+    color: var(--nba);
+}
+
+div.showcase-group>h4 {
+    font-size: 1.3rem;
+    margin-top: 18px;
+}
+
 /* Contact Form Section */
 section#contact-form {
     padding:15px;
@@ -205,8 +231,6 @@ section#skills .skill {
     margin-left: auto;
     margin-right: auto;
 }
-
-
 
 /* About Page Sidebar */
 aside#sidebar {
