--- a/css/style.css
+++ b/css/style.css
@@ -112,13 +112,41 @@ section#blurb p {
 }
 
 /* Front Page Showcase Section */
+section#fullstack {
+    text-align: center;
+    border-top: var(--bg2) solid 3px;
+}
+
+section#fullstack>h2 {
+    font-size: 2rem;
+    margin-bottom: 0;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+section#fullstack>h3 {
+    font-size: 1.3rem;
+    margin-bottom: 30px;
+    width: 65%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div.showcase-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 80%;
+    margin: auto;
+}
+
 div.showcase-group {
     border: solid 1px var(--nba);
-    margin: 15px auto;
+    margin: 15px;
     padding:15px;
     text-align: center;
-    min-width: 100px;
-    max-width: 300px;
+    width: 300px;
     background: var(--bg2);
     color: var(--lghtxt);
     text-align: center;
@@ -136,6 +164,26 @@ div.showcase-group>h4 {
     font-size: 1.3rem;
     margin-top: 18px;
 }
+
+button.action-btn {
+    background-color: var(--nba);
+    border: none;
+    color: var(--lghtxt);
+    padding: 14px 40px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.1rem;
+    border-radius: 5px;
+    transition: all 0.3s;
+    margin-top: 25px;
+    margin-bottom: 28px;
+}
+
+button.action-btn:hover {
+    background-color: var(--nbafocus);
+}
+
 
 /* Contact Form Section */
 section#contact-form {
