--- a/css/style.css
+++ b/css/style.css
@@ -356,10 +356,10 @@ footer a {
     /* intro blurb styles */
     section#blurb {
         min-height: 450px;
+        width: 450px;
         background-position: center;
-        background-position-x: center;
-        background-position-y: 50px;
-        background-attachment: fixed;
+        background-position-y: 0px;
+        background-size: cover;
     }
 
     br.mobile-only {
